<resources>
    <string name="action_settings">Settings</string>

    <string name="welcome_guest">Welcome, Guest!</string>

    <string name="placeholder_name"> </string>
    <string name="placeholder_member"> </string>
    <string name="placeholder_event"> </string>
    <string name="placeholder_event_description"> </string>

    <string name="txt_your_duties">My Duties</string>
    <string name="txt_refer_a_friend">Refer A Friend</string>
    <string name="hint_friend_email">Friend\'s Email</string>

    <string name="et_pn_channel_name">Evolve GT Notifications</string>
    <string name="et_pn_channel_description">Evolve GT Notifications are delivered in this channel.</string>

    <string name="menu_navigation_home">Home</string>
    <string name="menu_navigation_tracks">Tracks</string>
    <string name="menu_navigation_gear">Gear</string>
    <string name="menu_navigation_cart">Cart</string>
    <string name="menu_navigation_logout">Logout</string>
    <string name="menu_navigation_delete_acc">Delete Account</string>
    <string name="menu_navigation_settings">Settings</string>
    <string name="menu_navigation_help">Help</string>
    <string name="menu_navigation_privacy">Privacy Policy</string>
    <string name="menu_navigation_about_us">About Us</string>
    <string name="menu_navigation_switch_module">Switch Module</string>
    <!--<string name="menu_navigation_switch_app">Switch App</string>-->

    <string name="menu_navigation_upcoming_events">Upcoming Events</string>
    <string name="menu_navigation_past_events">Past Events</string>
    <string name="menu_navigation_order_history">Order History</string>
    <string name="menu_navigation_credit_history">Credit History</string>
    <string name="menu_navigation_membership">Membership</string>
    <string name="menu_navigation_profile">My Profile</string>
    <string name="menu_navigation_change_password">Change Password</string>
    <string name="menu_navigation_e_waiver">E-Waiver</string>

    <string name="title_upcoming_events">Upcoming Events</string>
    <string name="title_past_events">Past Events</string>
    <string name="title_all_events">All Events</string>
    <string name="title_cart">Cart</string>
    <string name="title_login">Login</string>
    <string name="title_home">Dashboard</string>
    <string name="title_shop">Shop</string>
    <string name="title_tracks">Tracks</string>
    <string name="title_events">Events</string>
    <string name="title_checkout">Checkout</string>
    <string name="title_edit_billing_address">Edit Billing Address</string>
    <string name="title_new_billing_address">Add Billing Address</string>
    <string name="title_edit_mailing_address">Edit Mailing Address</string>
    <string name="title_new_mailing_address">Add Mailing Address</string>
    <string name="title_settings">Settings</string>
    <string name="title_help">Help</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="title_about_us">About Us</string>
    <string name="title_gear">Gear</string>
    <string name="title_shop_rental">Rentals</string>
    <string name="title_duty_list">Duty</string>
    <string name="title_signature">Signature</string>
    <string name="title_users">Users</string>
    <string name="title_staffs">Job Assignments</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_terms_n_condition">Terms &amp; Conditions</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_reset_password">Reset Password</string>
    <string name="title_membership">Membership</string>
    <string name="title_membership_detail">Membership Details</string>
    <string name="title_sign_up">Create Account</string>

    <string name="title_e_waiver">E-Waiver</string>
    <string name="title_duties">Duties</string>
    <string name="title_i_am_here">I Am Here</string>

    <string name="msg_success">Success</string>

    <string name="test_multiline">1 \n 2</string>


    <string name="et_ok">OK</string>
    <string name="btn_continue_shopping">Continue Shopping</string>
    <!-- Error Messages -->

    <string name="label_trainings">Training</string>
    <string name="label_rentals">Rentals</string>
    <string name="label_rental_header">ITEM(S)</string>
    <string name="label_size_header">SIZE</string>
    <string name="btn_dialog_close">Close</string>
    <string name="txt_price_label_with_currency">Price : $%s</string>
    <string name="dummy_coupon">3o8r-mwnf-yjuu</string>
    <string name="text_loading">Loading…</string>

    <string name="title_race_licence_required">Race Licence is Required</string>
    <string name="title_skill_not_eligible">Skill Not Eligible</string>
    <string name="title_mrl_validation_failed">MRL Membership Required.</string>

    <string name="events_select_classes">Choose Classes</string>
    <string name="events_select_skill">Racer Status</string>
    <string name="cd_duty_status">Indicates duty assigned status </string>
    <string name="txt_track_days_label">Want to purchase the track day for this date?</string>
    <string name="transponder_rental_info"><super>**</super>Rental for customer does not have a transponder number</string>
    <string name="cd_profile_image">profile image</string>
    <string name="cd_camera_button">Camera Button</string>
    <string name="cd_button_to_add_a_new_shipping_address">button to add a new shipping address</string>
    <string name="cd_edit_shipping_address">edit shipping address</string>
    <string name="txt_menu_save">SAVE</string>
    <string name="txt_menu_done">DONE</string>
    <string name="cd_archie_banner">Archie Card Banner</string>
    <string name="button_to_add_quantity_by_1">Button to Add Quantity by 1</string>
    <string name="button_to_descrement_quantity_by_1">Button to decrement quantity by 1</string>
    <string name="label_quantity">Quantity</string>
    <string name="cd_event_cancel_status">Event Cancel Status</string>
    <string name="cd_button_to_add_event_to_cart">Button to add event to cart</string>
    <string name="cd_host_icon">Host Icon</string>
    <string name="cd_button_to_delete_a_cart_icon">Button to Delete a cart icon</string>
    <string name="lable_select_size">Select Size</string>
    <string name="txt_event_cancelled">Event Cancelled</string>
    <string name="txt_events_all_time">Events All Time</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="refer_a_friend_and_get_reward">Refer a friend and get reward</string>
    <string name="text_send">Send</string>
    <string name="refer_a_friend">Refer A Friend</string>
    <string name="msg_referral_sent">Invitation send successfully.</string>
    <string name="hosted_by">Hosted By:</string>
    <string name="label_add_new_billing_address_message">No billing address found. Please add a new address</string>
    <string name="moto_classes">Moto Classes</string>
    <string name="transfer_credit">Transfer Credit</string>
    <string name="track_day_required">Track Day required.</string>
    <string name="text_add_to_cart">Add To Cart</string>
    <string name="bike_data">Bike Data</string>
    <string name="bike_number">Bike Number</string>
    <string name="registration_closed">Sorry. Registration for this event is closed.</string>
    <string name="amount_to_transfer">Amount to transfer ($)</string>
    <string name="btn_transfer_credit">Transfer</string>
    <string name="msg_transaction_was_successful">Transaction was successful.</string>
    <string name="title_transfer_credit">Transfer Credit</string>
    <string name="no_assigned_duties">No Assigned duties.</string>
    <string name="racerStatus_amateur">Amateur</string>
    <string name="racer_status_expert">Expert</string>
    <string name="admin_event_logo">Admin Event Logo</string>
    <string name="txt_participants">Riders</string>
    <string name="txt_duties">Duties</string>
    <string name="i_am_here">I Am Here</string>
    <string name="text_show_passport">Show Passport</string>
    <string name="take_a_photo">Take a Selfie</string>
    <string name="i_agree_the">I agree the</string>
    <string name="three_dots">⋮</string>
    <string name="menu_cancel_event">Cancel Event</string>
    <string name="cd_passport_image">Passport Image</string>
    <string name="cd_group_badge">Group Badge</string>
    <string name="menu_accessories">Accessories</string>
    <string name="txt_job">Job:</string>
    <string name="list_txt_duties">Duties:</string>

    <string name="ev_file_provider" translatable="false">com.evolvegt.mobileapp.fileprovider</string>
    <string name="ev_pick_single">Please select your image</string>
    <string name="tech_passport">Tech Passport</string>
    <string name="tech_sign_in">Sign-in to Tech</string>
    <string name="msg_emergency_contact_details_required">Please update your emergency contact details to proceed.</string>

    <string name="dialog_message">Welcome to Alert Dialog</string>
    <string name="dialog_title">Javatpoint Alert Dialog</string>

</resources>
