<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/trainingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/trainingHeader"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorLightGray"
            android:paddingStart="@dimen/padding_large"
            android:gravity="center_vertical"
            android:textSize="@dimen/font_large"
            android:textStyle="bold"
            android:text="@string/label_trainings"/>
        <LinearLayout
            android:id="@+id/trainingContainer"
            android:layout_below="@+id/trainingHeader"
            android:orientation="vertical"
            android:layout_margin="@dimen/margin_large"
            android:background="@color/colorLightGray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rentalLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/trainingLayout">
        <TextView
            android:id="@+id/rentalHeader"
            android:layout_height="60dp"
            android:layout_width="match_parent"
            android:background="@color/colorLightGray"
            android:paddingStart="@dimen/padding_large"
            android:gravity="center_vertical"
            android:textSize="@dimen/font_large"
            android:textStyle="bold"
            android:text="@string/label_rentals"/>
        <LinearLayout
            android:id="@+id/rentalContainer"
            android:layout_below="@+id/rentalHeader"
            android:layout_margin="@dimen/margin_large"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:background="@color/colorLightGray"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <View
                    android:id="@+id/viewSplitter"
                    android:layout_width="2dp"
                    android:layout_height="10dp"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:id="@+id/itemHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_small"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginEnd="@dimen/margin_normal"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/viewSplitter"
                    android:background="@color/colorLightGray"
                    android:textStyle="bold"
                    android:text="@string/label_rental_header"/>
                <TextView
                    android:id="@+id/itemSizeHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_small"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginEnd="@dimen/margin_normal"
                    android:layout_toEndOf="@+id/viewSplitter"
                    android:background="@color/colorLightGray"
                    android:textStyle="bold"
                    android:text="@string/label_size_header"/>
                <View
                    android:layout_below="@id/itemHeader"
                    android:layout_width="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:layout_height="@dimen/divider_size_thick"
                    android:background="@color/colorLightGray"/>
            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>
    <TextView
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rentalLayout"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_alignParentEnd="true"
        android:paddingStart="@dimen/padding_x_large"
        android:paddingEnd="@dimen/padding_x_large"
        android:paddingTop="@dimen/padding_normal"
        android:paddingBottom="@dimen/padding_normal"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_large"
        android:background="@drawable/selector_button_primary"
        android:textSize="@dimen/font_medium"
        android:textColor="@color/colorTextWhite"
        android:text="@string/btn_dialog_close"/>
</RelativeLayout>