<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="@dimen/card_view_elevation">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/admin_event_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_normal">




        <ImageView
            android:id="@+id/admin_event_logo"
            android:layout_width="@dimen/et_list_image_width"
            android:layout_height="@dimen/et_list_image_height"
            tools:src="@drawable/e_waiver"
            android:contentDescription="@string/admin_event_logo"
            android:layout_alignParentStart="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <FrameLayout
            android:id="@+id/progressContainer"
            android:layout_width="@dimen/et_list_image_width"
            android:layout_height="@dimen/et_list_image_height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ProgressBar
                android:layout_width="@dimen/progressbar_size"
                android:layout_height="@dimen/progressbar_size"
                android:layout_gravity="center" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/contentLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/margin_normal"
            app:layout_constraintStart_toEndOf="@+id/admin_event_logo"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/admin_event_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_medium"
                tools:text="Event 123 Event 123 Event 123 Event 123 " />
            <TextView
                android:id="@+id/admin_event_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_x_small"
                android:textColor="@color/colorTextBlack"
                android:textSize="@dimen/font_medium"
                tools:text="12 Dec 2021" />
        </LinearLayout>
        <View
            android:id="@+id/actionSeparator"
            android:layout_width="5dp"
            android:layout_height="1dp"
            app:layout_constraintStart_toStartOf="@+id/contentLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contentLayout"/>
        <TextView
            style="@style/borderedButton"
            android:id="@+id/btnViewParticipants"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:padding="@dimen/padding_small"
            android:paddingTop="@dimen/padding_narrow"
            android:paddingBottom="@dimen/padding_narrow"
            android:layout_marginTop="@dimen/margin_normal"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/contentLayout"
            app:layout_constraintEnd_toStartOf="@+id/actionSeparator"
            app:layout_constraintTop_toBottomOf="@+id/contentLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/txt_participants" />
        <TextView
            style="@style/borderedButton"
            android:layout_height="30dp"
            android:id="@+id/btnViewDuties"
            android:layout_width="0dp"
            android:textStyle="normal"
            android:paddingTop="@dimen/padding_narrow"
            android:paddingBottom="@dimen/padding_narrow"
            app:layout_constraintStart_toEndOf="@+id/actionSeparator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnViewParticipants"
            app:layout_constraintBottom_toBottomOf="@+id/btnViewParticipants"
            android:text="@string/txt_duties" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>